--- a/src/components/FinalPoem.css
+++ b/src/components/FinalPoem.css
@@ -19,3 +19,9 @@
 .FinalPoem__poem {
   border-bottom: 2px gray dashed;
 }
+
+.FinalPoem__poem--ul {
+  list-style: none;
+  font-size: 2rem;
+  font-family: fantasy;
+}
